--- a/src/app/Features/home/Components/values/values.html
+++ b/src/app/Features/home/Components/values/values.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>{{getValuesTitle()}}</h1>
-    <p class="subtitle">The principles we believe in and work through</p>
+    <p class="subtitle text-muted">The principles we believe in and work through</p>
     <div class="value-container row mt-4">
         <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="value-card">
