--- a/src/app/Features/home/Components/hero-section/hero-section.html
+++ b/src/app/Features/home/Components/hero-section/hero-section.html
@@ -1,11 +1,13 @@
 <div class="hero-section">
   <div class="hero-content">
-    <h1 class="text-danger"> {{getHeroMainTitle()}}</h1>
-    <p > {{getHeroSubtitle()}} </p>
-    <span>{{getHeroMission()}}</span>
+    <h1 [ngStyle]="{'color': isRTL() ? '#001f4d' : 'red'}">
+      {{ getHeroMainTitle() }}
+    </h1>
+    <p class="subtitle"> {{getHeroSubtitle()}} </p>
+    <span >{{getHeroMission()}}</span>
     <div class="hero-buttons">
-      <a class="btn"> <i class="bi bi-grid-fill me-2"></i>{{getHeroProductFilterLabel()}}</a>
-      <a class="btn"> <i class="bi bi-chat-dots me-2"></i>{{getHeroKeepInTouch()}}</a>
+      <a class="btn" href="home#products"> <i class="bi bi-grid-fill me-2"></i>{{getHeroProductFilterLabel()}}</a>
+      <a class="btn" href="home#contact"> <i class="bi bi-chat-dots me-2"></i>{{getHeroKeepInTouch()}}</a>
     </div>
   </div>
 </div>
