--- a/src/app/Features/home/Components/values/values.css
+++ b/src/app/Features/home/Components/values/values.css
@@ -1,5 +1,7 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Cairo", "Tajawal", "Segoe UI", Arial, sans-serif;
+    font-size: clamp(14px, 1.5vw, 18px);
+    line-height: 1.6;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,7 +16,6 @@ h1 {
     margin-bottom: 10px;
 }
 p.subtitle {
-    color: #4a90e2;
     font-size: 1em;
     margin-bottom: 30px;
 }
@@ -30,10 +31,10 @@ p.subtitle {
     transition: all 0.3s ease;
     margin: 0rem 0.5rem;
     margin-bottom: 1.5rem;
-    height: 35vh;
+    height: 90%;
 }
 .value-card:hover{
-    transform: translateY(-10px) scale(1.02);
+    transform: translateY(-10px) scale(1.1);
 }
 
 .value-card h3 {
