--- a/src/app/Features/news/news-details/news-details.css
+++ b/src/app/Features/news/news-details/news-details.css
@@ -1,7 +1,7 @@
 .news-details-container {
   padding: 2rem 0;
   min-height: 100vh;
-  font-family: "Cairo", "Tajawal", "Segoe UI", Arial, sans-serif;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
   font-size: clamp(14px, 1.5vw, 18px);
   line-height: 1.6;
 }
