--- a/src/app/Shared/footer/footer.html
+++ b/src/app/Shared/footer/footer.html
@@ -12,12 +12,12 @@
                 <div class="col-lg-2 col-md-6 footer-col">
                     <h4 class="footer-title">{{getFooterQuickLinks()}}</h4>
                     <ul class="footer-links">
-                        <li><a href="#"> <i class="bi bi-house-door me-2"></i> {{getHome()}}</a></li>
-                        <li><a href="#"> <i class="bi bi-info-circle me-2"></i> {{getAbout()}}</a></li>
-                        <li><a href="#"> <i class="bi bi-box me-2"></i> {{getProducts()}}</a></li>
-                        <li><a href="#"> <i class="bi bi-person me-2"></i> {{getClients()}}</a></li>
-                        <li><a href="#"> <i class="bi bi-newspaper me-2"></i> {{getNews()}}</a></li>
-                        <li><a href="#"> <i class="bi bi-envelope me-2"></i> {{getContact()}}</a></li>
+                        <li><a href="home"> <i class="bi bi-house-door me-2"></i> {{getHome()}}</a></li>
+                        <li><a href="home#about"> <i class="bi bi-info-circle me-2"></i> {{getAbout()}}</a></li>
+                        <li><a href="home#products"> <i class="bi bi-box me-2"></i> {{getProducts()}}</a></li>
+                        <li><a href="home#clients"> <i class="bi bi-person me-2"></i> {{getClients()}}</a></li>
+                        <li><a href="home#news"> <i class="bi bi-newspaper me-2"></i> {{getNews()}}</a></li>
+                        <li><a href="home#contact"> <i class="bi bi-envelope me-2"></i> {{getContact()}}</a></li>
                     </ul>
                 </div>
                 
